--- a/enums/data.rawdatasourceids.html
+++ b/enums/data.rawdatasourceids.html
@@ -75,68 +75,68 @@
 				<h2>Index</h2>
 				<section class="tsd-panel tsd-index-panel">
 					<div class="tsd-index-content">
-						<section class="tsd-index-section tsd-is-not-exported">
+						<section class="tsd-index-section ">
 							<h3>Enumeration members</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported"><a href="data.rawdatasourceids.html#characteristics" class="tsd-kind-icon">Characteristics</a></li>
-								<li class="tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported"><a href="data.rawdatasourceids.html#measurementvalues" class="tsd-kind-icon">Measurement<wbr>Values</a></li>
-								<li class="tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported"><a href="data.rawdatasourceids.html#measurements" class="tsd-kind-icon">Measurements</a></li>
-								<li class="tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported"><a href="data.rawdatasourceids.html#none" class="tsd-kind-icon">None</a></li>
-								<li class="tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported"><a href="data.rawdatasourceids.html#parts" class="tsd-kind-icon">Parts</a></li>
+								<li class="tsd-kind-enum-member tsd-parent-kind-enum"><a href="data.rawdatasourceids.html#characteristics" class="tsd-kind-icon">Characteristics</a></li>
+								<li class="tsd-kind-enum-member tsd-parent-kind-enum"><a href="data.rawdatasourceids.html#measurementvalues" class="tsd-kind-icon">Measurement<wbr>Values</a></li>
+								<li class="tsd-kind-enum-member tsd-parent-kind-enum"><a href="data.rawdatasourceids.html#measurements" class="tsd-kind-icon">Measurements</a></li>
+								<li class="tsd-kind-enum-member tsd-parent-kind-enum"><a href="data.rawdatasourceids.html#none" class="tsd-kind-icon">None</a></li>
+								<li class="tsd-kind-enum-member tsd-parent-kind-enum"><a href="data.rawdatasourceids.html#parts" class="tsd-kind-icon">Parts</a></li>
 							</ul>
 						</section>
 					</div>
 				</section>
 			</section>
-			<section class="tsd-panel-group tsd-member-group tsd-is-not-exported">
+			<section class="tsd-panel-group tsd-member-group ">
 				<h2>Enumeration members</h2>
-				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported">
+				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum">
 					<a name="characteristics" class="tsd-anchor"></a>
 					<h3>Characteristics</h3>
 					<div class="tsd-signature tsd-kind-icon">Characteristics<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;2</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in data/raw_data.ts:304</li>
+							<li>Defined in data/raw_data.ts:296</li>
 						</ul>
 					</aside>
 				</section>
-				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported">
+				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum">
 					<a name="measurementvalues" class="tsd-anchor"></a>
 					<h3>Measurement<wbr>Values</h3>
 					<div class="tsd-signature tsd-kind-icon">Measurement<wbr>Values<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;8</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in data/raw_data.ts:306</li>
+							<li>Defined in data/raw_data.ts:298</li>
 						</ul>
 					</aside>
 				</section>
-				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported">
+				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum">
 					<a name="measurements" class="tsd-anchor"></a>
 					<h3>Measurements</h3>
 					<div class="tsd-signature tsd-kind-icon">Measurements<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;4</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in data/raw_data.ts:305</li>
+							<li>Defined in data/raw_data.ts:297</li>
 						</ul>
 					</aside>
 				</section>
-				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported">
+				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum">
 					<a name="none" class="tsd-anchor"></a>
 					<h3>None</h3>
 					<div class="tsd-signature tsd-kind-icon">None<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;0</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in data/raw_data.ts:302</li>
+							<li>Defined in data/raw_data.ts:294</li>
 						</ul>
 					</aside>
 				</section>
-				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported">
+				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum">
 					<a name="parts" class="tsd-anchor"></a>
 					<h3>Parts</h3>
 					<div class="tsd-signature tsd-kind-icon">Parts<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;1</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in data/raw_data.ts:303</li>
+							<li>Defined in data/raw_data.ts:295</li>
 						</ul>
 					</aside>
 				</section>
@@ -195,22 +195,22 @@
 				<ul class="before-current">
 				</ul>
 				<ul class="current">
-					<li class="current tsd-kind-enum tsd-parent-kind-external-module tsd-is-private tsd-is-not-exported">
+					<li class="current tsd-kind-enum tsd-parent-kind-external-module tsd-is-private">
 						<a href="data.rawdatasourceids.html" class="tsd-kind-icon">Raw<wbr>Data<wbr>Source<wbr>Ids</a>
 						<ul>
-							<li class=" tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported">
+							<li class=" tsd-kind-enum-member tsd-parent-kind-enum">
 								<a href="data.rawdatasourceids.html#characteristics" class="tsd-kind-icon">Characteristics</a>
 							</li>
-							<li class=" tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported">
+							<li class=" tsd-kind-enum-member tsd-parent-kind-enum">
 								<a href="data.rawdatasourceids.html#measurementvalues" class="tsd-kind-icon">Measurement<wbr>Values</a>
 							</li>
-							<li class=" tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported">
+							<li class=" tsd-kind-enum-member tsd-parent-kind-enum">
 								<a href="data.rawdatasourceids.html#measurements" class="tsd-kind-icon">Measurements</a>
 							</li>
-							<li class=" tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported">
+							<li class=" tsd-kind-enum-member tsd-parent-kind-enum">
 								<a href="data.rawdatasourceids.html#none" class="tsd-kind-icon">None</a>
 							</li>
-							<li class=" tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported">
+							<li class=" tsd-kind-enum-member tsd-parent-kind-enum">
 								<a href="data.rawdatasourceids.html#parts" class="tsd-kind-icon">Parts</a>
 							</li>
 						</ul>
