--- a/interfaces/drawing.drawingcontext.html
+++ b/interfaces/drawing.drawingcontext.html
@@ -260,7 +260,7 @@
 							</aside>
 							<div class="tsd-comment tsd-typography">
 								<div class="lead">
-									<p>Draws the specified <a href="../classes/drawing.bitmap.html">Bitmap</a> buffer with the specified <a href="../classes/drawing.imagedrawingsettings.html">ImageDrawingSettings</a>.</p>
+									<p>Draws the specified <a href="../classes/drawing.bitmap.html">Bitmap</a> buffer that is stored with the specified <a href="../classes/drawing.imagedatalayout.html">ImageDataLayout</a> with the specified <a href="../classes/drawing.imagedrawingsettings.html">ImageDrawingSettings</a>.</p>
 								</div>
 							</div>
 							<h4 class="tsd-parameters-title">Parameters</h4>
