--- a/interfaces/drawing.linesegmentdescription.html
+++ b/interfaces/drawing.linesegmentdescription.html
@@ -78,7 +78,7 @@
 				<h3>Hierarchy</h3>
 				<ul class="tsd-hierarchy">
 					<li>
-						<a href="drawing.linedescription-1.html" class="tsd-signature-type">LineDescription</a>
+						<a href="drawing.linedescription.html" class="tsd-signature-type">LineDescription</a>
 						<ul class="tsd-hierarchy">
 							<li>
 								<span class="target">LineSegmentDescription</span>
@@ -114,7 +114,7 @@
 					<h3><span class="tsd-flag ts-flagOptional">Optional</span> to</h3>
 					<div class="tsd-signature tsd-kind-icon">to<span class="tsd-signature-symbol">:</span> <a href="../modules/drawing.html#pointdescription" class="tsd-signature-type">PointDescription</a></div>
 					<aside class="tsd-sources">
-						<p>Inherited from <a href="drawing.linedescription-1.html">LineDescription</a>.<a href="drawing.linedescription-1.html#to">to</a></p>
+						<p>Inherited from <a href="drawing.linedescription.html">LineDescription</a>.<a href="drawing.linedescription.html#to">to</a></p>
 						<ul>
 							<li>Defined in drawing/geometry/path_segments.ts:65</li>
 						</ul>
