--- a/classes/drawing.bitmap.html
+++ b/classes/drawing.bitmap.html
@@ -115,13 +115,13 @@
 					<a name="constructor" class="tsd-anchor"></a>
 					<h3>constructor</h3>
 					<ul class="tsd-signatures tsd-kind-constructor tsd-parent-kind-class">
-						<li class="tsd-signature tsd-kind-icon">new <wbr>Bitmap<span class="tsd-signature-symbol">(</span>data<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Buffer</span><span class="tsd-signature-symbol"> | </span><a href="../interfaces/resources.hostbinary.html" class="tsd-signature-type">HostBinary</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="drawing.bitmap.html" class="tsd-signature-type">Bitmap</a></li>
+						<li class="tsd-signature tsd-kind-icon">new <wbr>Bitmap<span class="tsd-signature-symbol">(</span>data<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Buffer</span><span class="tsd-signature-symbol"> | </span><a href="../interfaces/resources.hostbinary.html" class="tsd-signature-type">HostBinary</a>, layout<span class="tsd-signature-symbol">?: </span><a href="drawing.bitmapdatalayout.html" class="tsd-signature-type">BitmapDataLayout</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="drawing.bitmap.html" class="tsd-signature-type">Bitmap</a></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in drawing/image/bitmap.ts:57</li>
+									<li>Defined in drawing/image/bitmap.ts:168</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -135,7 +135,15 @@
 									<h5>data: <span class="tsd-signature-type">Buffer</span><span class="tsd-signature-symbol"> | </span><a href="../interfaces/resources.hostbinary.html" class="tsd-signature-type">HostBinary</a></h5>
 									<div class="tsd-comment tsd-typography">
 										<div class="lead">
-											<p>A buffer that contains binary image data.</p>
+											<p>A buffer that contains binary image data. This can either be a binary png- or jpeg-image, or a raw pixel buffer.</p>
+										</div>
+									</div>
+								</li>
+								<li>
+									<h5><span class="tsd-flag ts-flagOptional">Optional</span> layout: <a href="drawing.bitmapdatalayout.html" class="tsd-signature-type">BitmapDataLayout</a></h5>
+									<div class="tsd-comment tsd-typography">
+										<div class="lead">
+											<p>In case the data buffer contains raw pixel data, it&#39;s necessary to specify the data layout of the buffer.</p>
 										</div>
 									</div>
 								</li>
@@ -151,13 +159,13 @@
 					<a name="measure" class="tsd-anchor"></a>
 					<h3>measure</h3>
 					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class">
-						<li class="tsd-signature tsd-kind-icon">measure<span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">object</span></li>
+						<li class="tsd-signature tsd-kind-icon">measure<span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="../interfaces/drawing.bitmapmeasurements.html" class="tsd-signature-type">BitmapMeasurements</a></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in drawing/image/bitmap.ts:90</li>
+									<li>Defined in drawing/image/bitmap.ts:211</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -165,27 +173,7 @@
 									<p>Loads the size and resolution of the image.</p>
 								</div>
 							</div>
-							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">object</span></h4>
-							<ul class="tsd-parameters">
-								<li class="tsd-parameter">
-									<h5>dpiX<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">any</span></h5>
-								</li>
-								<li class="tsd-parameter">
-									<h5>dpiY<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">any</span></h5>
-								</li>
-								<li class="tsd-parameter">
-									<h5>height<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">any</span></h5>
-								</li>
-								<li class="tsd-parameter">
-									<h5>pixel<wbr>Height<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">any</span></h5>
-								</li>
-								<li class="tsd-parameter">
-									<h5>pixel<wbr>Width<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">any</span></h5>
-								</li>
-								<li class="tsd-parameter">
-									<h5>width<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">any</span></h5>
-								</li>
-							</ul>
+							<h4 class="tsd-returns-title">Returns <a href="../interfaces/drawing.bitmapmeasurements.html" class="tsd-signature-type">BitmapMeasurements</a></h4>
 						</li>
 					</ul>
 				</section>
@@ -199,7 +187,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in drawing/image/bitmap.ts:73</li>
+									<li>Defined in drawing/image/bitmap.ts:187</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -218,13 +206,13 @@
 					<a name="loadfromresource" class="tsd-anchor"></a>
 					<h3><span class="tsd-flag ts-flagStatic">Static</span> load<wbr>From<wbr>Resource</h3>
 					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class tsd-is-static">
-						<li class="tsd-signature tsd-kind-icon">load<wbr>From<wbr>Resource<span class="tsd-signature-symbol">(</span>path<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="drawing.bitmap.html" class="tsd-signature-type">Bitmap</a></li>
+						<li class="tsd-signature tsd-kind-icon">load<wbr>From<wbr>Resource<span class="tsd-signature-symbol">(</span>path<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span>, layout<span class="tsd-signature-symbol">?: </span><a href="drawing.bitmapdatalayout.html" class="tsd-signature-type">BitmapDataLayout</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="drawing.bitmap.html" class="tsd-signature-type">Bitmap</a></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in drawing/image/bitmap.ts:81</li>
+									<li>Defined in drawing/image/bitmap.ts:203</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -238,6 +226,12 @@
 									<h5>path: <span class="tsd-signature-type">string</span></h5>
 									<div class="tsd-comment tsd-typography">
 										<p>The relative path to a bitmap file.</p>
+									</div>
+								</li>
+								<li>
+									<h5><span class="tsd-flag ts-flagOptional">Optional</span> layout: <a href="drawing.bitmapdatalayout.html" class="tsd-signature-type">BitmapDataLayout</a></h5>
+									<div class="tsd-comment tsd-typography">
+										<p>In case the file contains raw pixel data, it&#39;s necessary to specify the data layout of the file.</p>
 									</div>
 								</li>
 							</ul>
