--- a/enums/data.volumedirectionid.html
+++ b/enums/data.volumedirectionid.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>PlotPropertyTypeId | PiWeb Plot Extension API Reference</title>
+	<title>VolumeDirectionId | PiWeb Plot Extension API Reference</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
@@ -57,10 +57,10 @@
 					<a href="../modules/data.html">data</a>
 				</li>
 				<li>
-					<a href="data.plotpropertytypeid.html">PlotPropertyTypeId</a>
+					<a href="data.volumedirectionid.html">VolumeDirectionId</a>
 				</li>
 			</ul>
-			<h1>Enumeration PlotPropertyTypeId</h1>
+			<h1>Enumeration VolumeDirectionId</h1>
 		</div>
 	</div>
 </header>
@@ -75,68 +75,46 @@
 				<h2>Index</h2>
 				<section class="tsd-panel tsd-index-panel">
 					<div class="tsd-index-content">
-						<section class="tsd-index-section ">
+						<section class="tsd-index-section tsd-is-not-exported">
 							<h3>Enumeration members</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-enum-member tsd-parent-kind-enum"><a href="data.plotpropertytypeid.html#date" class="tsd-kind-icon">Date</a></li>
-								<li class="tsd-kind-enum-member tsd-parent-kind-enum"><a href="data.plotpropertytypeid.html#float" class="tsd-kind-icon">Float</a></li>
-								<li class="tsd-kind-enum-member tsd-parent-kind-enum"><a href="data.plotpropertytypeid.html#integer" class="tsd-kind-icon">Integer</a></li>
-								<li class="tsd-kind-enum-member tsd-parent-kind-enum"><a href="data.plotpropertytypeid.html#string" class="tsd-kind-icon">String</a></li>
-								<li class="tsd-kind-enum-member tsd-parent-kind-enum"><a href="data.plotpropertytypeid.html#timespan" class="tsd-kind-icon">Time<wbr>Span</a></li>
+								<li class="tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported"><a href="data.volumedirectionid.html#x" class="tsd-kind-icon">X</a></li>
+								<li class="tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported"><a href="data.volumedirectionid.html#y" class="tsd-kind-icon">Y</a></li>
+								<li class="tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported"><a href="data.volumedirectionid.html#z" class="tsd-kind-icon">Z</a></li>
 							</ul>
 						</section>
 					</div>
 				</section>
 			</section>
-			<section class="tsd-panel-group tsd-member-group ">
+			<section class="tsd-panel-group tsd-member-group tsd-is-not-exported">
 				<h2>Enumeration members</h2>
-				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum">
-					<a name="date" class="tsd-anchor"></a>
-					<h3>Date</h3>
-					<div class="tsd-signature tsd-kind-icon">Date<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;3</span></div>
+				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported">
+					<a name="x" class="tsd-anchor"></a>
+					<h3>X</h3>
+					<div class="tsd-signature tsd-kind-icon">X<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;0</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in data/plot.ts:187</li>
+							<li>Defined in data/volume.ts:34</li>
 						</ul>
 					</aside>
 				</section>
-				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum">
-					<a name="float" class="tsd-anchor"></a>
-					<h3>Float</h3>
-					<div class="tsd-signature tsd-kind-icon">Float<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;2</span></div>
+				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported">
+					<a name="y" class="tsd-anchor"></a>
+					<h3>Y</h3>
+					<div class="tsd-signature tsd-kind-icon">Y<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;1</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in data/plot.ts:186</li>
+							<li>Defined in data/volume.ts:35</li>
 						</ul>
 					</aside>
 				</section>
-				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum">
-					<a name="integer" class="tsd-anchor"></a>
-					<h3>Integer</h3>
-					<div class="tsd-signature tsd-kind-icon">Integer<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;1</span></div>
+				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported">
+					<a name="z" class="tsd-anchor"></a>
+					<h3>Z</h3>
+					<div class="tsd-signature tsd-kind-icon">Z<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;2</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in data/plot.ts:185</li>
-						</ul>
-					</aside>
-				</section>
-				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum">
-					<a name="string" class="tsd-anchor"></a>
-					<h3>String</h3>
-					<div class="tsd-signature tsd-kind-icon">String<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;0</span></div>
-					<aside class="tsd-sources">
-						<ul>
-							<li>Defined in data/plot.ts:184</li>
-						</ul>
-					</aside>
-				</section>
-				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum">
-					<a name="timespan" class="tsd-anchor"></a>
-					<h3>Time<wbr>Span</h3>
-					<div class="tsd-signature tsd-kind-icon">Time<wbr>Span<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;4</span></div>
-					<aside class="tsd-sources">
-						<ul>
-							<li>Defined in data/plot.ts:188</li>
+							<li>Defined in data/volume.ts:36</li>
 						</ul>
 					</aside>
 				</section>
@@ -195,23 +173,17 @@
 				<ul class="before-current">
 				</ul>
 				<ul class="current">
-					<li class="current tsd-kind-enum tsd-parent-kind-external-module tsd-is-private">
-						<a href="data.plotpropertytypeid.html" class="tsd-kind-icon">Plot<wbr>Property<wbr>Type<wbr>Id</a>
+					<li class="current tsd-kind-enum tsd-parent-kind-external-module tsd-is-private tsd-is-not-exported">
+						<a href="data.volumedirectionid.html" class="tsd-kind-icon">Volume<wbr>Direction<wbr>Id</a>
 						<ul>
-							<li class=" tsd-kind-enum-member tsd-parent-kind-enum">
-								<a href="data.plotpropertytypeid.html#date" class="tsd-kind-icon">Date</a>
+							<li class=" tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported">
+								<a href="data.volumedirectionid.html#x" class="tsd-kind-icon">X</a>
 							</li>
-							<li class=" tsd-kind-enum-member tsd-parent-kind-enum">
-								<a href="data.plotpropertytypeid.html#float" class="tsd-kind-icon">Float</a>
+							<li class=" tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported">
+								<a href="data.volumedirectionid.html#y" class="tsd-kind-icon">Y</a>
 							</li>
-							<li class=" tsd-kind-enum-member tsd-parent-kind-enum">
-								<a href="data.plotpropertytypeid.html#integer" class="tsd-kind-icon">Integer</a>
-							</li>
-							<li class=" tsd-kind-enum-member tsd-parent-kind-enum">
-								<a href="data.plotpropertytypeid.html#string" class="tsd-kind-icon">String</a>
-							</li>
-							<li class=" tsd-kind-enum-member tsd-parent-kind-enum">
-								<a href="data.plotpropertytypeid.html#timespan" class="tsd-kind-icon">Time<wbr>Span</a>
+							<li class=" tsd-kind-enum-member tsd-parent-kind-enum tsd-is-not-exported">
+								<a href="data.volumedirectionid.html#z" class="tsd-kind-icon">Z</a>
 							</li>
 						</ul>
 					</li>
