--- a/enums/drawing.pixelformatid-1.html
+++ b/enums/drawing.pixelformatid-1.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>PlotPropertyTypeId | PiWeb Plot Extension API Reference</title>
+	<title>PixelFormatId | PiWeb Plot Extension API Reference</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
@@ -54,13 +54,13 @@
 					<a href="../globals.html">Globals</a>
 				</li>
 				<li>
-					<a href="../modules/data.html">data</a>
+					<a href="../modules/drawing.html">drawing</a>
 				</li>
 				<li>
-					<a href="data.plotpropertytypeid.html">PlotPropertyTypeId</a>
+					<a href="drawing.pixelformatid-1.html">PixelFormatId</a>
 				</li>
 			</ul>
-			<h1>Enumeration PlotPropertyTypeId</h1>
+			<h1>Enumeration PixelFormatId</h1>
 		</div>
 	</div>
 </header>
@@ -78,11 +78,11 @@
 						<section class="tsd-index-section ">
 							<h3>Enumeration members</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-enum-member tsd-parent-kind-enum"><a href="data.plotpropertytypeid.html#date" class="tsd-kind-icon">Date</a></li>
-								<li class="tsd-kind-enum-member tsd-parent-kind-enum"><a href="data.plotpropertytypeid.html#float" class="tsd-kind-icon">Float</a></li>
-								<li class="tsd-kind-enum-member tsd-parent-kind-enum"><a href="data.plotpropertytypeid.html#integer" class="tsd-kind-icon">Integer</a></li>
-								<li class="tsd-kind-enum-member tsd-parent-kind-enum"><a href="data.plotpropertytypeid.html#string" class="tsd-kind-icon">String</a></li>
-								<li class="tsd-kind-enum-member tsd-parent-kind-enum"><a href="data.plotpropertytypeid.html#timespan" class="tsd-kind-icon">Time<wbr>Span</a></li>
+								<li class="tsd-kind-enum-member tsd-parent-kind-enum"><a href="drawing.pixelformatid-1.html#bgr24" class="tsd-kind-icon">BGR24</a></li>
+								<li class="tsd-kind-enum-member tsd-parent-kind-enum"><a href="drawing.pixelformatid-1.html#bgra32" class="tsd-kind-icon">BGRA32</a></li>
+								<li class="tsd-kind-enum-member tsd-parent-kind-enum"><a href="drawing.pixelformatid-1.html#gray8" class="tsd-kind-icon">GRAY8</a></li>
+								<li class="tsd-kind-enum-member tsd-parent-kind-enum"><a href="drawing.pixelformatid-1.html#pbgra32" class="tsd-kind-icon">PBGRA32</a></li>
+								<li class="tsd-kind-enum-member tsd-parent-kind-enum"><a href="drawing.pixelformatid-1.html#rgb24" class="tsd-kind-icon">RGB24</a></li>
 							</ul>
 						</section>
 					</div>
@@ -91,52 +91,52 @@
 			<section class="tsd-panel-group tsd-member-group ">
 				<h2>Enumeration members</h2>
 				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum">
-					<a name="date" class="tsd-anchor"></a>
-					<h3>Date</h3>
-					<div class="tsd-signature tsd-kind-icon">Date<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;3</span></div>
+					<a name="bgr24" class="tsd-anchor"></a>
+					<h3>BGR24</h3>
+					<div class="tsd-signature tsd-kind-icon">BGR24<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;1</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in data/plot.ts:187</li>
+							<li>Defined in drawing/image/bitmap.ts:58</li>
 						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum">
-					<a name="float" class="tsd-anchor"></a>
-					<h3>Float</h3>
-					<div class="tsd-signature tsd-kind-icon">Float<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;2</span></div>
+					<a name="bgra32" class="tsd-anchor"></a>
+					<h3>BGRA32</h3>
+					<div class="tsd-signature tsd-kind-icon">BGRA32<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;2</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in data/plot.ts:186</li>
+							<li>Defined in drawing/image/bitmap.ts:59</li>
 						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum">
-					<a name="integer" class="tsd-anchor"></a>
-					<h3>Integer</h3>
-					<div class="tsd-signature tsd-kind-icon">Integer<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;1</span></div>
+					<a name="gray8" class="tsd-anchor"></a>
+					<h3>GRAY8</h3>
+					<div class="tsd-signature tsd-kind-icon">GRAY8<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;4</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in data/plot.ts:185</li>
+							<li>Defined in drawing/image/bitmap.ts:61</li>
 						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum">
-					<a name="string" class="tsd-anchor"></a>
-					<h3>String</h3>
-					<div class="tsd-signature tsd-kind-icon">String<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;0</span></div>
+					<a name="pbgra32" class="tsd-anchor"></a>
+					<h3>PBGRA32</h3>
+					<div class="tsd-signature tsd-kind-icon">PBGRA32<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;3</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in data/plot.ts:184</li>
+							<li>Defined in drawing/image/bitmap.ts:60</li>
 						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum">
-					<a name="timespan" class="tsd-anchor"></a>
-					<h3>Time<wbr>Span</h3>
-					<div class="tsd-signature tsd-kind-icon">Time<wbr>Span<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;4</span></div>
+					<a name="rgb24" class="tsd-anchor"></a>
+					<h3>RGB24</h3>
+					<div class="tsd-signature tsd-kind-icon">RGB24<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;0</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in data/plot.ts:188</li>
+							<li>Defined in drawing/image/bitmap.ts:57</li>
 						</ul>
 					</aside>
 				</section>
@@ -151,15 +151,10 @@
 					<li class=" tsd-kind-external-module">
 						<a href="../modules/index.html">Index</a>
 					</li>
-					<li class="current tsd-kind-external-module">
-						<a href="../modules/data.html">data</a>
-						<ul>
-							<li class=" tsd-kind-module tsd-parent-kind-external-module">
-								<a href="../modules/data.wellknownkeys.html">Well<wbr>Known<wbr>Keys</a>
-							</li>
-						</ul>
-					</li>
 					<li class=" tsd-kind-external-module">
+						<a href="../modules/data.html">data</a>
+					</li>
+					<li class="current tsd-kind-external-module">
 						<a href="../modules/drawing.html">drawing</a>
 					</li>
 					<li class=" tsd-kind-external-module">
@@ -196,22 +191,22 @@
 				</ul>
 				<ul class="current">
 					<li class="current tsd-kind-enum tsd-parent-kind-external-module tsd-is-private">
-						<a href="data.plotpropertytypeid.html" class="tsd-kind-icon">Plot<wbr>Property<wbr>Type<wbr>Id</a>
+						<a href="drawing.pixelformatid-1.html" class="tsd-kind-icon">Pixel<wbr>Format<wbr>Id</a>
 						<ul>
 							<li class=" tsd-kind-enum-member tsd-parent-kind-enum">
-								<a href="data.plotpropertytypeid.html#date" class="tsd-kind-icon">Date</a>
+								<a href="drawing.pixelformatid-1.html#bgr24" class="tsd-kind-icon">BGR24</a>
 							</li>
 							<li class=" tsd-kind-enum-member tsd-parent-kind-enum">
-								<a href="data.plotpropertytypeid.html#float" class="tsd-kind-icon">Float</a>
+								<a href="drawing.pixelformatid-1.html#bgra32" class="tsd-kind-icon">BGRA32</a>
 							</li>
 							<li class=" tsd-kind-enum-member tsd-parent-kind-enum">
-								<a href="data.plotpropertytypeid.html#integer" class="tsd-kind-icon">Integer</a>
+								<a href="drawing.pixelformatid-1.html#gray8" class="tsd-kind-icon">GRAY8</a>
 							</li>
 							<li class=" tsd-kind-enum-member tsd-parent-kind-enum">
-								<a href="data.plotpropertytypeid.html#string" class="tsd-kind-icon">String</a>
+								<a href="drawing.pixelformatid-1.html#pbgra32" class="tsd-kind-icon">PBGRA32</a>
 							</li>
 							<li class=" tsd-kind-enum-member tsd-parent-kind-enum">
-								<a href="data.plotpropertytypeid.html#timespan" class="tsd-kind-icon">Time<wbr>Span</a>
+								<a href="drawing.pixelformatid-1.html#rgb24" class="tsd-kind-icon">RGB24</a>
 							</li>
 						</ul>
 					</li>
