--- a/interfaces/drawing.imagedatalayoutdescription.html
+++ b/interfaces/drawing.imagedatalayoutdescription.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>PlotPropertyTypeId | PiWeb Plot Extension API Reference</title>
+	<title>ImageDataLayoutDescription | PiWeb Plot Extension API Reference</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
@@ -54,89 +54,99 @@
 					<a href="../globals.html">Globals</a>
 				</li>
 				<li>
-					<a href="../modules/data.html">data</a>
+					<a href="../modules/drawing.html">drawing</a>
 				</li>
 				<li>
-					<a href="data.plotpropertytypeid.html">PlotPropertyTypeId</a>
+					<a href="drawing.imagedatalayoutdescription.html">ImageDataLayoutDescription</a>
 				</li>
 			</ul>
-			<h1>Enumeration PlotPropertyTypeId</h1>
+			<h1>Interface ImageDataLayoutDescription</h1>
 		</div>
 	</div>
 </header>
 <div class="container container-main">
 	<div class="row">
 		<div class="col-8 col-content">
-			<section class="tsd-panel tsd-comment">
-				<div class="tsd-comment tsd-typography">
-				</div>
+			<section class="tsd-panel tsd-hierarchy">
+				<h3>Hierarchy</h3>
+				<ul class="tsd-hierarchy">
+					<li>
+						<span class="target">ImageDataLayoutDescription</span>
+					</li>
+				</ul>
+			</section>
+			<section class="tsd-panel">
+				<h3>Implemented by</h3>
+				<ul class="tsd-hierarchy">
+					<li><a href="../classes/drawing.imagedatalayout.html" class="tsd-signature-type">ImageDataLayout</a></li>
+				</ul>
 			</section>
 			<section class="tsd-panel-group tsd-index-group">
 				<h2>Index</h2>
 				<section class="tsd-panel tsd-index-panel">
 					<div class="tsd-index-content">
 						<section class="tsd-index-section ">
-							<h3>Enumeration members</h3>
+							<h3>Properties</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-enum-member tsd-parent-kind-enum"><a href="data.plotpropertytypeid.html#date" class="tsd-kind-icon">Date</a></li>
-								<li class="tsd-kind-enum-member tsd-parent-kind-enum"><a href="data.plotpropertytypeid.html#float" class="tsd-kind-icon">Float</a></li>
-								<li class="tsd-kind-enum-member tsd-parent-kind-enum"><a href="data.plotpropertytypeid.html#integer" class="tsd-kind-icon">Integer</a></li>
-								<li class="tsd-kind-enum-member tsd-parent-kind-enum"><a href="data.plotpropertytypeid.html#string" class="tsd-kind-icon">String</a></li>
-								<li class="tsd-kind-enum-member tsd-parent-kind-enum"><a href="data.plotpropertytypeid.html#timespan" class="tsd-kind-icon">Time<wbr>Span</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="drawing.imagedatalayoutdescription.html#dpix" class="tsd-kind-icon">dpiX</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="drawing.imagedatalayoutdescription.html#dpiy" class="tsd-kind-icon">dpiY</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="drawing.imagedatalayoutdescription.html#pixelformat" class="tsd-kind-icon">pixel<wbr>Format</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="drawing.imagedatalayoutdescription.html#pixelheight" class="tsd-kind-icon">pixel<wbr>Height</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="drawing.imagedatalayoutdescription.html#pixelwidth" class="tsd-kind-icon">pixel<wbr>Width</a></li>
 							</ul>
 						</section>
 					</div>
 				</section>
 			</section>
 			<section class="tsd-panel-group tsd-member-group ">
-				<h2>Enumeration members</h2>
-				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum">
-					<a name="date" class="tsd-anchor"></a>
-					<h3>Date</h3>
-					<div class="tsd-signature tsd-kind-icon">Date<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;3</span></div>
+				<h2>Properties</h2>
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
+					<a name="dpix" class="tsd-anchor"></a>
+					<h3><span class="tsd-flag ts-flagOptional">Optional</span> dpiX</h3>
+					<div class="tsd-signature tsd-kind-icon">dpiX<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in data/plot.ts:187</li>
+							<li>Defined in drawing/image/settings.ts:241</li>
 						</ul>
 					</aside>
 				</section>
-				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum">
-					<a name="float" class="tsd-anchor"></a>
-					<h3>Float</h3>
-					<div class="tsd-signature tsd-kind-icon">Float<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;2</span></div>
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
+					<a name="dpiy" class="tsd-anchor"></a>
+					<h3><span class="tsd-flag ts-flagOptional">Optional</span> dpiY</h3>
+					<div class="tsd-signature tsd-kind-icon">dpiY<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in data/plot.ts:186</li>
+							<li>Defined in drawing/image/settings.ts:242</li>
 						</ul>
 					</aside>
 				</section>
-				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum">
-					<a name="integer" class="tsd-anchor"></a>
-					<h3>Integer</h3>
-					<div class="tsd-signature tsd-kind-icon">Integer<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;1</span></div>
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
+					<a name="pixelformat" class="tsd-anchor"></a>
+					<h3>pixel<wbr>Format</h3>
+					<div class="tsd-signature tsd-kind-icon">pixel<wbr>Format<span class="tsd-signature-symbol">:</span> <a href="../modules/drawing.html#pixelformat-1" class="tsd-signature-type">PixelFormat</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in data/plot.ts:185</li>
+							<li>Defined in drawing/image/settings.ts:238</li>
 						</ul>
 					</aside>
 				</section>
-				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum">
-					<a name="string" class="tsd-anchor"></a>
-					<h3>String</h3>
-					<div class="tsd-signature tsd-kind-icon">String<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;0</span></div>
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
+					<a name="pixelheight" class="tsd-anchor"></a>
+					<h3>pixel<wbr>Height</h3>
+					<div class="tsd-signature tsd-kind-icon">pixel<wbr>Height<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in data/plot.ts:184</li>
+							<li>Defined in drawing/image/settings.ts:240</li>
 						</ul>
 					</aside>
 				</section>
-				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum">
-					<a name="timespan" class="tsd-anchor"></a>
-					<h3>Time<wbr>Span</h3>
-					<div class="tsd-signature tsd-kind-icon">Time<wbr>Span<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;4</span></div>
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
+					<a name="pixelwidth" class="tsd-anchor"></a>
+					<h3>pixel<wbr>Width</h3>
+					<div class="tsd-signature tsd-kind-icon">pixel<wbr>Width<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in data/plot.ts:188</li>
+							<li>Defined in drawing/image/settings.ts:239</li>
 						</ul>
 					</aside>
 				</section>
@@ -151,15 +161,10 @@
 					<li class=" tsd-kind-external-module">
 						<a href="../modules/index.html">Index</a>
 					</li>
-					<li class="current tsd-kind-external-module">
-						<a href="../modules/data.html">data</a>
-						<ul>
-							<li class=" tsd-kind-module tsd-parent-kind-external-module">
-								<a href="../modules/data.wellknownkeys.html">Well<wbr>Known<wbr>Keys</a>
-							</li>
-						</ul>
-					</li>
 					<li class=" tsd-kind-external-module">
+						<a href="../modules/data.html">data</a>
+					</li>
+					<li class="current tsd-kind-external-module">
 						<a href="../modules/drawing.html">drawing</a>
 					</li>
 					<li class=" tsd-kind-external-module">
@@ -195,23 +200,23 @@
 				<ul class="before-current">
 				</ul>
 				<ul class="current">
-					<li class="current tsd-kind-enum tsd-parent-kind-external-module tsd-is-private">
-						<a href="data.plotpropertytypeid.html" class="tsd-kind-icon">Plot<wbr>Property<wbr>Type<wbr>Id</a>
+					<li class="current tsd-kind-interface tsd-parent-kind-external-module">
+						<a href="drawing.imagedatalayoutdescription.html" class="tsd-kind-icon">Image<wbr>Data<wbr>Layout<wbr>Description</a>
 						<ul>
-							<li class=" tsd-kind-enum-member tsd-parent-kind-enum">
-								<a href="data.plotpropertytypeid.html#date" class="tsd-kind-icon">Date</a>
+							<li class=" tsd-kind-property tsd-parent-kind-interface">
+								<a href="drawing.imagedatalayoutdescription.html#dpix" class="tsd-kind-icon">dpiX</a>
 							</li>
-							<li class=" tsd-kind-enum-member tsd-parent-kind-enum">
-								<a href="data.plotpropertytypeid.html#float" class="tsd-kind-icon">Float</a>
+							<li class=" tsd-kind-property tsd-parent-kind-interface">
+								<a href="drawing.imagedatalayoutdescription.html#dpiy" class="tsd-kind-icon">dpiY</a>
 							</li>
-							<li class=" tsd-kind-enum-member tsd-parent-kind-enum">
-								<a href="data.plotpropertytypeid.html#integer" class="tsd-kind-icon">Integer</a>
+							<li class=" tsd-kind-property tsd-parent-kind-interface">
+								<a href="drawing.imagedatalayoutdescription.html#pixelformat" class="tsd-kind-icon">pixel<wbr>Format</a>
 							</li>
-							<li class=" tsd-kind-enum-member tsd-parent-kind-enum">
-								<a href="data.plotpropertytypeid.html#string" class="tsd-kind-icon">String</a>
+							<li class=" tsd-kind-property tsd-parent-kind-interface">
+								<a href="drawing.imagedatalayoutdescription.html#pixelheight" class="tsd-kind-icon">pixel<wbr>Height</a>
 							</li>
-							<li class=" tsd-kind-enum-member tsd-parent-kind-enum">
-								<a href="data.plotpropertytypeid.html#timespan" class="tsd-kind-icon">Time<wbr>Span</a>
+							<li class=" tsd-kind-property tsd-parent-kind-interface">
+								<a href="drawing.imagedatalayoutdescription.html#pixelwidth" class="tsd-kind-icon">pixel<wbr>Width</a>
 							</li>
 						</ul>
 					</li>
