--- a/enums/drawing.pixelformatid.html
+++ b/enums/drawing.pixelformatid.html
@@ -81,8 +81,8 @@
 								<li class="tsd-kind-enum-member tsd-parent-kind-enum"><a href="drawing.pixelformatid.html#bgr24" class="tsd-kind-icon">BGR24</a></li>
 								<li class="tsd-kind-enum-member tsd-parent-kind-enum"><a href="drawing.pixelformatid.html#bgra32" class="tsd-kind-icon">BGRA32</a></li>
 								<li class="tsd-kind-enum-member tsd-parent-kind-enum"><a href="drawing.pixelformatid.html#gray8" class="tsd-kind-icon">GRAY8</a></li>
+								<li class="tsd-kind-enum-member tsd-parent-kind-enum"><a href="drawing.pixelformatid.html#pbgra32" class="tsd-kind-icon">PBGRA32</a></li>
 								<li class="tsd-kind-enum-member tsd-parent-kind-enum"><a href="drawing.pixelformatid.html#rgb24" class="tsd-kind-icon">RGB24</a></li>
-								<li class="tsd-kind-enum-member tsd-parent-kind-enum"><a href="drawing.pixelformatid.html#rgba32" class="tsd-kind-icon">RGBA32</a></li>
 							</ul>
 						</section>
 					</div>
@@ -96,17 +96,17 @@
 					<div class="tsd-signature tsd-kind-icon">BGR24<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;1</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in drawing/image/settings.ts:210</li>
+							<li>Defined in drawing/image/bitmap.ts:58</li>
 						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum">
 					<a name="bgra32" class="tsd-anchor"></a>
 					<h3>BGRA32</h3>
-					<div class="tsd-signature tsd-kind-icon">BGRA32<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;3</span></div>
+					<div class="tsd-signature tsd-kind-icon">BGRA32<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;2</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in drawing/image/settings.ts:212</li>
+							<li>Defined in drawing/image/bitmap.ts:59</li>
 						</ul>
 					</aside>
 				</section>
@@ -116,7 +116,17 @@
 					<div class="tsd-signature tsd-kind-icon">GRAY8<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;4</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in drawing/image/settings.ts:213</li>
+							<li>Defined in drawing/image/bitmap.ts:61</li>
+						</ul>
+					</aside>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum">
+					<a name="pbgra32" class="tsd-anchor"></a>
+					<h3>PBGRA32</h3>
+					<div class="tsd-signature tsd-kind-icon">PBGRA32<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;3</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in drawing/image/bitmap.ts:60</li>
 						</ul>
 					</aside>
 				</section>
@@ -126,17 +136,7 @@
 					<div class="tsd-signature tsd-kind-icon">RGB24<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;0</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in drawing/image/settings.ts:209</li>
-						</ul>
-					</aside>
-				</section>
-				<section class="tsd-panel tsd-member tsd-kind-enum-member tsd-parent-kind-enum">
-					<a name="rgba32" class="tsd-anchor"></a>
-					<h3>RGBA32</h3>
-					<div class="tsd-signature tsd-kind-icon">RGBA32<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol"> =&nbsp;2</span></div>
-					<aside class="tsd-sources">
-						<ul>
-							<li>Defined in drawing/image/settings.ts:211</li>
+							<li>Defined in drawing/image/bitmap.ts:57</li>
 						</ul>
 					</aside>
 				</section>
@@ -203,10 +203,10 @@
 								<a href="drawing.pixelformatid.html#gray8" class="tsd-kind-icon">GRAY8</a>
 							</li>
 							<li class=" tsd-kind-enum-member tsd-parent-kind-enum">
-								<a href="drawing.pixelformatid.html#rgb24" class="tsd-kind-icon">RGB24</a>
+								<a href="drawing.pixelformatid.html#pbgra32" class="tsd-kind-icon">PBGRA32</a>
 							</li>
 							<li class=" tsd-kind-enum-member tsd-parent-kind-enum">
-								<a href="drawing.pixelformatid.html#rgba32" class="tsd-kind-icon">RGBA32</a>
+								<a href="drawing.pixelformatid.html#rgb24" class="tsd-kind-icon">RGB24</a>
 							</li>
 						</ul>
 					</li>
