--- a/interfaces/drawing.linegeometrydescription.html
+++ b/interfaces/drawing.linegeometrydescription.html
@@ -78,7 +78,7 @@
 				<h3>Hierarchy</h3>
 				<ul class="tsd-hierarchy">
 					<li>
-						<a href="drawing.linedescription-1.html" class="tsd-signature-type">LineDescription</a>
+						<a href="drawing.linedescription.html" class="tsd-signature-type">LineDescription</a>
 						<ul class="tsd-hierarchy">
 							<li>
 								<span class="target">LineGeometryDescription</span>
@@ -116,7 +116,7 @@
 					<h3><span class="tsd-flag ts-flagOptional">Optional</span> end</h3>
 					<div class="tsd-signature tsd-kind-icon">end<span class="tsd-signature-symbol">:</span> <a href="../modules/drawing.html#pointdescription" class="tsd-signature-type">PointDescription</a></div>
 					<aside class="tsd-sources">
-						<p>Inherited from <a href="drawing.linedescription-1.html">LineDescription</a>.<a href="drawing.linedescription-1.html#end">end</a></p>
+						<p>Inherited from <a href="drawing.linedescription.html">LineDescription</a>.<a href="drawing.linedescription.html#end">end</a></p>
 						<ul>
 							<li>Defined in drawing/geometry/geometries.ts:117</li>
 						</ul>
@@ -127,7 +127,7 @@
 					<h3><span class="tsd-flag ts-flagOptional">Optional</span> start</h3>
 					<div class="tsd-signature tsd-kind-icon">start<span class="tsd-signature-symbol">:</span> <a href="../modules/drawing.html#pointdescription" class="tsd-signature-type">PointDescription</a></div>
 					<aside class="tsd-sources">
-						<p>Inherited from <a href="drawing.linedescription-1.html">LineDescription</a>.<a href="drawing.linedescription-1.html#start">start</a></p>
+						<p>Inherited from <a href="drawing.linedescription.html">LineDescription</a>.<a href="drawing.linedescription.html#start">start</a></p>
 						<ul>
 							<li>Defined in drawing/geometry/geometries.ts:116</li>
 						</ul>
@@ -138,7 +138,7 @@
 					<h3><span class="tsd-flag ts-flagOptional">Optional</span> transform</h3>
 					<div class="tsd-signature tsd-kind-icon">transform<span class="tsd-signature-symbol">:</span> <a href="../modules/drawing.html#transformdescription" class="tsd-signature-type">TransformDescription</a></div>
 					<aside class="tsd-sources">
-						<p>Inherited from <a href="drawing.linedescription-1.html">LineDescription</a>.<a href="drawing.linedescription-1.html#transform">transform</a></p>
+						<p>Inherited from <a href="drawing.linedescription.html">LineDescription</a>.<a href="drawing.linedescription.html#transform">transform</a></p>
 						<ul>
 							<li>Defined in drawing/geometry/geometries.ts:118</li>
 						</ul>
