--- a/classes/drawing.bitmapdatalayout.html
+++ b/classes/drawing.bitmapdatalayout.html
@@ -125,7 +125,7 @@
 					<a name="constructor" class="tsd-anchor"></a>
 					<h3>constructor</h3>
 					<ul class="tsd-signatures tsd-kind-constructor tsd-parent-kind-class">
-						<li class="tsd-signature tsd-kind-icon">new <wbr>Bitmap<wbr>Data<wbr>Layout<span class="tsd-signature-symbol">(</span>pixelFormat<span class="tsd-signature-symbol">: </span><a href="../modules/drawing.html#pixelformat-1" class="tsd-signature-type">PixelFormat</a>, pixelWidth<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">number</span>, pixelHeight<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">number</span>, dpiX<span class="tsd-signature-symbol">?: </span><span class="tsd-signature-type">number</span>, dpiY<span class="tsd-signature-symbol">?: </span><span class="tsd-signature-type">number</span>, stride<span class="tsd-signature-symbol">?: </span><span class="tsd-signature-type">number</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="drawing.bitmapdatalayout.html" class="tsd-signature-type">BitmapDataLayout</a></li>
+						<li class="tsd-signature tsd-kind-icon">new <wbr>Bitmap<wbr>Data<wbr>Layout<span class="tsd-signature-symbol">(</span>pixelFormat<span class="tsd-signature-symbol">: </span><a href="../modules/drawing.html#pixelformat" class="tsd-signature-type">PixelFormat</a>, pixelWidth<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">number</span>, pixelHeight<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">number</span>, dpiX<span class="tsd-signature-symbol">?: </span><span class="tsd-signature-type">number</span>, dpiY<span class="tsd-signature-symbol">?: </span><span class="tsd-signature-type">number</span>, stride<span class="tsd-signature-symbol">?: </span><span class="tsd-signature-type">number</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="drawing.bitmapdatalayout.html" class="tsd-signature-type">BitmapDataLayout</a></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
@@ -142,7 +142,7 @@
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
 								<li>
-									<h5>pixelFormat: <a href="../modules/drawing.html#pixelformat-1" class="tsd-signature-type">PixelFormat</a></h5>
+									<h5>pixelFormat: <a href="../modules/drawing.html#pixelformat" class="tsd-signature-type">PixelFormat</a></h5>
 								</li>
 								<li>
 									<h5>pixelWidth: <span class="tsd-signature-type">number</span></h5>
@@ -200,7 +200,7 @@
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class">
 					<a name="pixelformat" class="tsd-anchor"></a>
 					<h3>pixel<wbr>Format</h3>
-					<div class="tsd-signature tsd-kind-icon">pixel<wbr>Format<span class="tsd-signature-symbol">:</span> <a href="../modules/drawing.html#pixelformat-1" class="tsd-signature-type">PixelFormat</a></div>
+					<div class="tsd-signature tsd-kind-icon">pixel<wbr>Format<span class="tsd-signature-symbol">:</span> <a href="../modules/drawing.html#pixelformat" class="tsd-signature-type">PixelFormat</a></div>
 					<aside class="tsd-sources">
 						<ul>
 							<li>Defined in drawing/image/bitmap.ts:92</li>
@@ -290,7 +290,7 @@
 					<a name="getbytesperpixel" class="tsd-anchor"></a>
 					<h3><span class="tsd-flag ts-flagStatic">Static</span> <span class="tsd-flag ts-flagPrivate">Private</span> get<wbr>Bytes<wbr>Per<wbr>Pixel</h3>
 					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class tsd-is-private tsd-is-static">
-						<li class="tsd-signature tsd-kind-icon">get<wbr>Bytes<wbr>Per<wbr>Pixel<span class="tsd-signature-symbol">(</span>format<span class="tsd-signature-symbol">: </span><a href="../modules/drawing.html#pixelformat-1" class="tsd-signature-type">PixelFormat</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">number</span></li>
+						<li class="tsd-signature tsd-kind-icon">get<wbr>Bytes<wbr>Per<wbr>Pixel<span class="tsd-signature-symbol">(</span>format<span class="tsd-signature-symbol">: </span><a href="../modules/drawing.html#pixelformat" class="tsd-signature-type">PixelFormat</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">number</span></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
@@ -304,7 +304,7 @@
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
 								<li>
-									<h5>format: <a href="../modules/drawing.html#pixelformat-1" class="tsd-signature-type">PixelFormat</a></h5>
+									<h5>format: <a href="../modules/drawing.html#pixelformat" class="tsd-signature-type">PixelFormat</a></h5>
 								</li>
 							</ul>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">number</span></h4>
