--- a/classes/drawing.linesegment.html
+++ b/classes/drawing.linesegment.html
@@ -269,7 +269,7 @@
 					<a name="createlinesegment" class="tsd-anchor"></a>
 					<h3><span class="tsd-flag ts-flagStatic">Static</span> create<wbr>Line<wbr>Segment</h3>
 					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class tsd-is-static">
-						<li class="tsd-signature tsd-kind-icon">create<wbr>Line<wbr>Segment<span class="tsd-signature-symbol">(</span>description<span class="tsd-signature-symbol">?: </span><a href="../interfaces/drawing.linedescription.html" class="tsd-signature-type">LineDescription</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="drawing.linesegment.html" class="tsd-signature-type">LineSegment</a></li>
+						<li class="tsd-signature tsd-kind-icon">create<wbr>Line<wbr>Segment<span class="tsd-signature-symbol">(</span>description<span class="tsd-signature-symbol">?: </span><a href="../interfaces/drawing.linedescription-1.html" class="tsd-signature-type">LineDescription</a><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="drawing.linesegment.html" class="tsd-signature-type">LineSegment</a></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
@@ -286,7 +286,7 @@
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
 								<li>
-									<h5><span class="tsd-flag ts-flagOptional">Optional</span> description: <a href="../interfaces/drawing.linedescription.html" class="tsd-signature-type">LineDescription</a></h5>
+									<h5><span class="tsd-flag ts-flagOptional">Optional</span> description: <a href="../interfaces/drawing.linedescription-1.html" class="tsd-signature-type">LineDescription</a></h5>
 									<div class="tsd-comment tsd-typography">
 										<p>Line segment description.</p>
 									</div>
